added header css

--- a/style.css
+++ b/style.css
@@ -8,3 +8,17 @@
     background-image: linear-gradient( 179.3deg,  rgba(233,10,130,1) -0.1%, rgba(12,21,139,1) 96.7% );
     
 }
+
+.header{
+    width: 85%;
+    height: 15%;
+    border: 1px solid gold;
+    margin: auto;
+    margin-bottom: 10px;
+    border-radius: 20px; 
+    justify-content: space-evenly;
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    
+}
