--- a/style.css
+++ b/style.css
@@ -31,3 +31,14 @@
     margin-bottom: 10px;
    
 }
+
+.first{
+    height: 350px;
+    width: 48%;
+    border: 1px solid orange;
+    margin: auto;
+    border-radius: 30px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    align-content: center; 
+    text-align: center;
+}
