--- a/style.css
+++ b/style.css
@@ -42,3 +42,14 @@
     align-content: center; 
     text-align: center;
 }
+
+.foot{
+    height: 20%;
+    width: 70%;
+    border: 1px solid yellow;
+    border-radius: 30px;
+    margin: auto;
+    text-align: center;
+    align-content: center;
+    color: white;
+}
